<resources>
    <string name="app_name">CalculadoraMO</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="btn0">0</string>
    <string name="btnBorrar">BORRAR</string>
    <string name="btnigual">=</string>
    <string name="btnpunto">,</string>
    <string name="btnS">+</string>
    <string name="btnR">-</string>
    <string name="btnM">*</string>
    <string name="btnD">/</string>
    <string name="btnacerca">ACERCA DE</string>
    <string name="Res">Resultado:</string>
    <string name="msg">Bienvenidos</string>
    <string name="titulo">Calculadora Básica</string>
    <string name="nombre">Mikel Ortega Ortiz</string>
    <string name="curso">Cuarto Nivel "B"</string>
</resources>
