<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"

    tools:showIn="@layout/main_activity"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/txtIngreso"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:enabled="false"
                    android:editable="false"
                    android:focusable="false"
                    android:visibility="visible" />
            </LinearLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:layout_width="0dp"
                        android:id="@+id/btnLimpiar"
                        android:text="@string/btnBorrar"
                        android:layout_weight="1"
                        android:layout_column="0"/>

                </TableRow>

            </TableLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:layout_width="0dp"
                        android:id="@+id/btn1"
                        android:text="@string/btn1"
                        android:layout_weight="1"
                        android:layout_column="0"/>

                    <Button
                        android:id="@+id/btn2"
                        android:layout_width="0dp"
                        android:text="@string/btn2"
                        android:layout_column="1"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/btn3"
                        android:layout_width="0dp"
                        android:text="@string/btn3"
                        android:layout_column="2"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/btnS"
                        android:layout_width="0dp"
                        android:text="@string/btnS"
                        android:layout_column="3"
                        android:layout_weight="1" />

                </TableRow>

            </TableLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/btn4"
                        android:text="@string/btn4"
                        android:layout_weight="1"
                        android:layout_column="0"/>

                    <Button
                        android:id="@+id/btn5"
                        android:text="@string/btn5"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/btn6"
                        android:text="@string/btn6"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/btnR"
                        android:text="@string/btnR"
                        android:layout_weight="1" />
                </TableRow>
            </TableLayout>

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/btn7"
                        android:text="@string/btn7"
                        android:layout_weight="1" />

                    <Button
                        android:layout_gravity="center"
                        android:id="@+id/btn8"
                        android:text="@string/btn8"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/btn9"
                        android:text="@string/btn9"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/btnM"
                        android:text="@string/btnM"
                        android:layout_weight="1" />
                </TableRow>
            </TableLayout>

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/btnpunto"
                        android:text="@string/btnpunto"
                        android:layout_weight="1" />

                    <Button
                        android:layout_gravity="center"
                        android:id="@+id/btn0"
                        android:text="@string/btn0"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/btnigual"
                        android:text="@string/btnigual"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/btnD"
                        android:text="@string/btnD"
                        android:layout_weight="1" />
                </TableRow>
            </TableLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Res"/>

                <TextView
                    android:id="@+id/resultado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <Button
                android:layout_width="182dp"
                android:layout_height="match_parent"
                android:id="@+id/acerca"
                android:layout_gravity="center"
                android:text="@string/btnacerca"
                android:layout_weight="1"
                android:textStyle="bold" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
